--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@tanstack/react-query": "^5.59.0",
+    "@types/next-auth": "^3.15.0",
     "@uidotdev/usehooks": "^2.4.1",
     "@upstash/ratelimit": "^2.0.3",
     "@upstash/redis": "^1.34.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.447.0",
+    "mongodb": "^6.9.0",
+    "mongoose": "^8.7.1",
     "next": "14.2.14",
+    "next-auth": "^4.24.8",
     "next-plausible": "^3.12.2",
     "react": "^18",
     "react-dom": "^18",
