--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@upstash/redis": "^1.34.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.11.8",
     "lucide-react": "^0.447.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
